crates/aranya-policy-compiler/tests/data/statements/wrong_arg_count_finish_function_bad_argument.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: bad argument
   |
19 |             f()
   |             ^^^ call to `f` has 0 arguments but it should have 1
